--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -799,7 +799,7 @@
                   
                 </div>
               </div>
-              <div class="col-sm-6 ">
+              <div class="col-sm-4">
                 <div class=" card mt-3 col m-3 rounded-3 " >
                   <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between">
@@ -814,7 +814,23 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 ">
+              <div class="col-sm-4">
+                <div class=" card mt-3 col  rounded-3 " >
+                  <div class="card-body ">
+                    <div class="d-flex align-items-center justify-content-between">
+                      <div class="content-left">
+                        <h3 class="mb-0"><span id="callsCount"></span></h3>
+                        <small>Total Discussion Count</small>
+                      </div>
+                      <span class="badge bg-label-success rounded-circle p-2">
+                        <i class="bx bx-user bx-sm"></i>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+             
+              <div class="col-sm-4 ">
                 <div class=" card mt-3 col m-3 rounded-3 " >
                   <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between">
@@ -829,8 +845,10 @@
                   </div>
                   
                 </div>
- 
+              
             </div>
+           
+
             <div class="container-fluid ">
               <h4 class="ms-0 mt-3 text-white ">Todays All Discussions</h4>
 
