--- a/views/public/html/profile.html
+++ b/views/public/html/profile.html
@@ -985,7 +985,7 @@
   // Send request to update logged status to false
   const userId = localStorage.getItem('userId');
   if (userId) {
-    axios.put(`https://nemo.ivistaz.co/user/${userId}/logout`)
+    axios.put(`http://localhost:4000/user/${userId}/logout`)
       .then(response => {
         console.log('Logged out successfully');
       })
@@ -1056,7 +1056,7 @@ document.getElementById("editProfileForm").addEventListener("submit", function(e
     };
 
     // Send PUT request to update user data
-    axios.put(`https://nemo.ivistaz.co/user/edit-userdata/${decodedToken.userId}`, updateData)
+    axios.put(`http://localhost:4000/user/edit-userdata/${decodedToken.userId}`, updateData)
       .then(response => {
         console.log('User data updated successfully:', response.data);
         // Display success message
