--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -820,7 +820,7 @@
                     <div class="d-flex align-items-center justify-content-between">
                       <div class="content-left">
                         <h3 class="mb-0"><span id="callsCount"></span></h3>
-                        <small>Total Discussion Count</small>
+                        <small>Todays Calls count</small>
                       </div>
                       <span class="badge bg-label-success rounded-circle p-2">
                         <i class="bx bx-user bx-sm"></i>
