--- a/views/public/html/add-c-contract.html
+++ b/views/public/html/add-c-contract.html
@@ -685,7 +685,7 @@
                                             <select id="contract_vsl" class="form-select" required>
                                                 <!-- Options will be dynamically added using JavaScript -->
                                             </select>
-                                            <label for="contract_vsl" class="form-label">Select Vessel</label>
+                                            <label for="contract_vsl" class="form-label">Select Vessel Type</label>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
@@ -693,7 +693,7 @@
                                             <select id="candidate_c_vessel" class="form-select" required>
                                                 <!-- Options will be dynamically added using JavaScript -->
                                             </select>
-                                            <label for="candidate_c_vessel" class="form-label">Vessel type</label>
+                                            <label for="candidate_c_vessel" class="form-label">Vessel</label>
                                         </div>
                                     </div>
                                 </div>
@@ -812,14 +812,14 @@
                                 <div class="row mb-3">
                                     <div class="col-md-6">
                                         <div class="form-floating">
-                                            <input name="aoanum" type="text" id="contract_aoa_num" class="form-control" required/>
+                                            <input name="aoanum" type="text" id="contract_aoa_num" class="form-control"/>
                                             <label for="contract_aoa_num">AOA Number</label>
 
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                       <div class="form-floating">
-                                          <input name="enumber" type="text" id="contract_emigrate" class="form-control" required/>
+                                          <input name="enumber" type="text" id="contract_emigrate" class="form-control"/>
                                           <label for="contract_emigrate">Emigrate Number</label>
                                       </div>
                                   </div>
