--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -1676,11 +1676,14 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Generate Report</button>
                 </form>
-        
+                <div id="crewListMonthWiseContainer">
+              </div>
+              
+
                 <!-- Table to display crew list -->
                 <div class="mt-4 table-responsive">
                     <table class="table table-bordered table" id="crewlisttable">
-                      <thead>
+                      <!-- <thead>
                         <tr>
                             <th>#</th>
                             <th>Candidate ID</th>
@@ -1701,14 +1704,8 @@
                             <th>Wages</th>
                             <th>Wages Types</th>
                         </tr>
-                    </thead>
-                    <input type="text" id="searchInputcl" placeholder="Search...">
-
-                    <select id="rowsPerPageSelectcl">
-                      <option value="10">10</option>
-                      <option value="25">25</option>
-                      <option value="50">50</option>
-                  </select>
+                    </thead> -->
+                   
                         <tbody id="crewListTableBody">
                             <!-- Table rows will be dynamically added here -->
                         </tbody>
