--- a/views/public/html/search.html
+++ b/views/public/html/search.html
@@ -700,10 +700,15 @@
             </div>
         </div>
         <div class="row">
+          <div class="col">
+            <label for="fromAge" class="form-label">From Age</label>
+            <input type="text" class="form-control form-control-sm" id="fromAge">
+        </div>
         <div class="col">
-          <label for="ageNemo" class="form-label">Age</label>
-          <input type="text" class="form-control form-control-sm" id="ageNemo">
-      </div>
+            <label for="toAge" class="form-label">To Age</label>
+            <input type="text" class="form-control form-control-sm" id="toAge">
+        </div>
+        
         </div>
         <div class="row ">
             <div class=" text-end mt-3 mb-0 pb-0">
