--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1021,6 +1021,7 @@
                                                             <th  style="font-size: 8px;">Swift Code</th>
                                                             <th style="font-size: 8px;">IFSC Code</th>
                                                             <th  style="font-size: 8px;">Passbook</th>
+                                                            <th  style="font-size: 8px;">View Passbook</th>
                                                             <th  style="font-size: 8px;">PAN number</th>
                                                             <th  style="font-size: 8px;">PAN Card</th>
                                                             <th  style="font-size: 8px;">View PAN card</th>
