--- a/views/public/html/add-c-contract.html
+++ b/views/public/html/add-c-contract.html
@@ -604,8 +604,8 @@
                                       
                                       <th scope="col"  style="font-size: 8px;">Rank</th>
                                       <th scope="col" style="font-size: 8px;">Company</th>
-                                      <th scope="col" style="font-size: 8px;">VSL Name</th>
                                       <th scope="col" style="font-size: 8px;">Vessel Type</th>
+                                      <th scope="col" style="font-size: 8px;">Vessel Name</th>
                                       <th scope="col" style="font-size: 8px;">SignOn Port</th>
                                       <th scope="col" style="font-size: 8px;">SignOn</th>
                                       <th scope="col" style="font-size: 8px;">Wages Start</th>
