--- a/views/public/html/search.html
+++ b/views/public/html/search.html
@@ -14,6 +14,8 @@
   <meta charset="UTF-8">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
   <title>Search | Nsnemo</title>
   <!-- <link rel="stylesheet" href="../staticfiles/style/assets/vendor/fonts/boxicons.css"> -->
   <!-- Favicon -->
@@ -49,7 +51,9 @@
 .candidate-button:hover {
     background-color: #0056b3;
 }
-
+.select2{
+        width:100% !important;
+      }
 
     @keyframes l9 {
       33%  {background-position: 0% 33%, 100% 33%, 200% 33%}
@@ -806,6 +810,26 @@
     <script src="../assets/js/main.js"></script>
 
     <!-- Page JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+    <script>
+      $("#rank").select2({
+          placeholder: "Select a Rank",
+          allowClear: true
+      });
+      $("#vsl").select2({
+          placeholder: "Select a Vessel",
+          allowClear: true
+      });
+      $("#grade").select2({
+          placeholder: "Select a Grade",
+          allowClear: true
+      });
+      $("#license").select2({
+          placeholder: "Select a Grade",
+          allowClear: true
+      });
+      
+      </script>
    
     <script src="./search.js"></script>
     <!-- Place this tag in your head or just before your close body tag. -->
