--- a/views/public/html/search.html
+++ b/views/public/html/search.html
@@ -21,6 +21,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
   <style>
+    
     .loader {
       --r1: 154%;
       --r2: 68.5%;
@@ -47,6 +48,10 @@
     border-radius: 4px;
     cursor: pointer;
 }
+
+/* Card container */
+
+
 
 .candidate-button:hover {
     background-color: #0056b3;
