--- a/views/public/html/add-c-contract.html
+++ b/views/public/html/add-c-contract.html
@@ -619,7 +619,9 @@
                                       <th scope="col" style="font-size: 8px;">AOA Number</th>
                                       <th scope="col"  style="font-size: 8px;">Emigrate Number</th>
                                       <th scope="col" style="font-size: 8px;">Document</th>
+                                      <th scope="col" style="font-size: 8px;">View Document</th>
                                       <th scope="col"style="font-size: 8px;">AOA</th>
+                                      <th scope="col"style="font-size: 8px;">View AOA</th>
                                       <th scope="col"style="font-size: 8px;">Contract</th>
                                       <th scope="col" style="font-size: 8px;">Actions</th>
                                   </tr>
