--- a/views/public/html/edit-c-document.html
+++ b/views/public/html/edit-c-document.html
@@ -616,7 +616,7 @@
                                 ≡ EDIT CANDIDATE</i>
                             </button>
                             <ul class="dropdown-menu dropdown-menu-start">
-                                <li><a class="dropdown-item" id="personnel" >> PERSONNEL</a></li>
+                                <li><a class="dropdown-item" id="personal" >> PERSONAL</a></li>
                                 <li><a class="dropdown-item" id="discussion" >> DISCUSSION</a></li>
                                 <li><a class="dropdown-item" id="contract">> CONTRACT</a></li>
                                 <li><a class="dropdown-item" id="document">> DOCUMENT</a></li>
