--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -613,7 +613,7 @@
                             ≡ EDIT CANDIDATE</i>
                             </button>
                             <ul class="dropdown-menu  dropdown-menu-start">
-                                <li><a class="dropdown-item" id="personnel" >> PERSONNEL</a></li>
+                                <li><a class="dropdown-item" id="personal" >> PERSONAL</a></li>
                                 <li><a class="dropdown-item" id="discussion" >> DISCUSSION</a></li>
                                 <li><a class="dropdown-item" id="contract">> CONTRACT</a></li>
                                 <li><a class="dropdown-item" id="document">> DOCUMENT</a></li>
@@ -629,7 +629,7 @@
                     </div>
                 <div class="w-100 mt-3" >
                   <form id="edit-candidate-form" class="card">
-                      <h5 class="card-header">Personnel</h5>
+                      <h5 class="card-header">Personal</h5>
                      
                   
     
