--- a/views/public/html/seaservicetable.html
+++ b/views/public/html/seaservicetable.html
@@ -578,7 +578,7 @@
                     ≡ EDIT CANDIDATE</i>
                 </button>
                 <ul class="dropdown-menu" >
-                    <li><a class="dropdown-item" id="personnel" >> PERSONNEL</a></li>
+                    <li><a class="dropdown-item" id="personal" >> PERSONAL</a></li>
                     <li><a class="dropdown-item" id="discussion" >> DISCUSSION</a></li>
                     <li><a class="dropdown-item" id="contract">> CONTRACT</a></li>
                     <li><a class="dropdown-item" id="document">> DOCUMENT</a></li>
@@ -719,7 +719,7 @@
             // Define the destination URLs based on the clicked item
             var destinationPage = "";
            switch (itemId) {
-                case "personnel":
+                case "personal":
                     destinationPage = `./edit-candidate-2.html?memId=${memId}`;
                     break;
                 case "discussion":
