--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -626,7 +626,7 @@
                             <div class="card-body">
                                 <!-- Add your candidate information display here -->
                                 <div id="contentContainer" class="btn-group d-flex flex-wrap justify-content-center">
-                                  <button type="button" class="btn btn-primary  mb-2" onclick="loadContent('personnel')">Personnel</button>
+                                  <button type="button" class="btn btn-primary  mb-2" onclick="loadContent('personal')">Personal</button>
                                   <button type="button" class="btn btn-primary mb-2" onclick="loadContent('discussion')">Discussion</button>
                                   <button type="button" class="btn btn-primary mb-2" onclick="loadContent('contract')">Contract</button>
                                   <button type="button" class="btn btn-primary mb-2" onclick="loadContent('document')">Document</button>
@@ -643,8 +643,8 @@
                               
                               
                                
-                                <!-- Personnel Content -->
-                                <div id="personnelContent" style="display: none;">
+                                <!-- Personal Content -->
+                                <div id="personalContent" style="display: none;">
                                     <form id="view-candidate-form" >
                                       <div class="" style="max-height: 600px; width: auto; overflow: auto; font-size: 12px;">
                                         <div  >
