--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -624,6 +624,8 @@
                         <div class="card">
                             <h5 class="card-header text-center">View Candidate</h5>
                             <div class="card-body">
+                            <div class="btn btn-primary mb-3"> <span class="fw-bolder">Candidate Id : </span> <span  id="memId" value=""></span> </div>
+
                                 <!-- Add your candidate information display here -->
                                 <div id="contentContainer" class="btn-group d-flex flex-wrap justify-content-center">
                                   <button type="button" class="btn btn-primary  mb-2" onclick="loadContent('personal')">Personal</button>
