--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -652,7 +652,7 @@
                                         <div  >
                                           <!-- No need for the hidden input here -->
                                           <div id="imageContainer" class="d-flex justify-content-center">
-                                              <img src="" alt=" &nbsp;No Photo present for the candidate" class="rounded-circle border border-light border-5" style="width: 70px;height: 70px;">
+                                              <img src="" alt=" &nbsp;No Photo present for the candidate" class=" border border-primary border-5" style="">
                                           </div>
                                       </div>
                                       
