--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -652,7 +652,7 @@
                                         <div  >
                                           <!-- No need for the hidden input here -->
                                           <div id="imageContainer" class="d-flex justify-content-center">
-                                              <img src="" alt=" &nbsp;No Photo present for the candidate" class=" border border-primary border-5" style="">
+                                              <img src="" alt=" &nbsp;No Photo present for the candidate" class=" border border-primary border-5" style="width: 100px;height: auto;">
                                           </div>
                                       </div>
                                       
