--- a/views/public/html/add-c-bank.html
+++ b/views/public/html/add-c-bank.html
@@ -627,7 +627,9 @@
                                         <th  style="font-size: 8px;">Beneficiary Address</th>
                                         <th  style="font-size: 8px;">PAN Number</th>
                                         <th style="font-size: 8px;">Passbook</th>
+                                        <th style="font-size: 8px;">View Passbook</th>
                                         <th  style="font-size: 8px;">PAN Card</th>
+                                        <th  style="font-size: 8px;">View PAN Card</th>
                                         <th  style="font-size: 8px;">Branch</th>
                                         <th  style="font-size: 8px;">Types</th>
                                         <th  style="font-size: 8px;">Created By</th>
