--- a/views/public/html/add-c-document.html
+++ b/views/public/html/add-c-document.html
@@ -659,7 +659,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="document_files">Document Files:</label>
-                                <input type="text" class="form-control" id="document_files" name="document_files" required>
+                                <input type="file" class="form-control" id="document_files" name="document_files" required>
                             </div>
                             <div class="mb-3">
                               <label for="stcw">STCW:</label>
