--- a/views/public/html/edit-c-document.html
+++ b/views/public/html/edit-c-document.html
@@ -653,10 +653,10 @@
                             </div>
                             <div class="mb-3">
                               <label for="prev_document_files">Previously Uploaded Document Files:</label>
-                              <input type="text" class="form-control" id="prev_document_files" name="prev_document_files" required>
+                              <input type="text" class="form-control" disabled id="prev_document_files" name="prev_document_files" required>
 
                                 <label for="document_files">Document Files:</label>
-                                <input type="text" class="form-control" id="document_files" name="document_files" required>
+                                <input type="file" class="form-control" id="document_files" name="document_files" required>
                             </div>
                             <div class="">
                               <label for="stcw">STCW:</label>
