--- a/views/public/html/add-c-document.html
+++ b/views/public/html/add-c-document.html
@@ -602,6 +602,7 @@
                                         <th scope="col"  style="font-size: 8px;">Issue Date</th>
                                         <th scope="col"  style="font-size: 8px;">Issue Place</th>
                                         <th scope="col"  style="font-size: 8px;">Document Files</th>
+                                        <th scope="col"  style="font-size: 8px;">View Document Files</th>
                                         <th scope="col"  style="font-size: 8px;">STCW</th>
                                         <!-- Add more columns if needed -->
                                         <th scope="col"  style="font-size: 8px;">Actions</th>
