--- a/views/public/html/add-c-medicals.html
+++ b/views/public/html/add-c-medicals.html
@@ -608,6 +608,7 @@
                                         <th style="font-size: 8px;">Status</th>
                                         <th style="font-size: 8px;">Amount</th>
                                         <th style="font-size: 8px;">Upload File</th>
+                                        <th style="font-size: 8px;">View Upload File</th>
                                         <th style="font-size: 8px;">Created By</th>
                                         <th style="font-size: 8px;">Actions</th>
                                     </tr>
