--- a/views/public/html/edit-c-medicals.html
+++ b/views/public/html/edit-c-medicals.html
@@ -670,8 +670,10 @@
                                 <input name="amt" type="text" id="hospital_amount" class="form-control">
                             </div>
                             <div class="col">
-                              <label for="hospital_upload" class="form-label">Upload</label>
-                              <input name="upload" type="file" id="hospital_upload" class="form-control">
+                              <label for="hospital_upload" class="form-label">Previously uploaded File</label>
+                              <input name="upload" type="text" disabled id="hospital_upload" class="form-control">
+                              <label for="hospital_new_upload" class="form-label">Upload</label>
+                              <input name="upload" type="file" id="hospital_new_upload" class="form-control">
                           </div>
                           
                         </div>
