--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -992,30 +992,53 @@
                     <div class="card-body pb-0">
                         <div class="row">
                             <div class="col-md-6 mb-0">
+                              <div>
+                              <label for="edit_candidate_photos"> Previous Photo</label>
+
+                              <input
+                                        type="text"
+                                        disabled
+                                        class="form-control"
+                                        id="edit_candidate_photos"
+                                      
+                                        
+                                    />
+                              </div>
                                 <div class="form-floating">
+                                  
+
                                     <input
                                         type="file"
                                         class="form-control"
-                                        id="edit_candidate_photos"
+                                        id="newPhoto"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_1_Help"
                                         
                                     />
-                                    <label for="edit_candidate_photos">Photo</label>
+                                    <label for="newPhoto">Upload new Photo</label>
                                 </div>
                             </div>
     
                             <div class="col-md-6 mb-0">
+                              <label for="edit_candidate_resume">Previous Resume</label>
+                              <input
+                              type="text"
+                              disabled
+                              class="form-control"
+                              id="edit_candidate_resume"
+                              
+                              
+                          />
+                    
                                 <div class="form-floating">
                                     <input
                                         type="file"
                                         class="form-control"
-                                        id="edit_candidate_resume"
-                                        placeholder="Field X"
-                                        aria-describedby="fieldX_2_Help"
+                                        id="newRes"
+                                        
                                         
                                     />
-                                    <label for="edit_candidate_resume">Resume</label>
+                                    <label for="newRes">Upload new Resume</label>
                                 </div>
                             </div>
                         </div>
