--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -778,6 +778,18 @@
                                                       <option value="0">No</option>
                                                   </select>
                                               </div>
+                                              <div class="col-md-6 mb-1 mt-2">
+                                                <label for="prevPhoto">Existing Photo</label>
+                                                <input type="text" disabled class="form-control small-font" id="prevPhoto"  aria-describedby="fieldX_2_Help" required />
+                                                <label for="edit_candidate_photo mt-2">Upload new Photo</label>
+                                                <input type="file" class="form-control small-font" id="edit_candidate_photo"  aria-describedby="fieldX_2_Help" required />
+                                            </div>
+                                            <div class="col-md-6 mb-1 mt-2">
+                                              <label for="prevRes">Existing Resume</label>
+                                              <input type="text" disabled class="form-control small-font" id="prevRes"  aria-describedby="fieldX_2_Help" required />
+                                              <label for="edit_candidate_resume mt-2">Upload new Resume</label>
+                                              <input type="file" class="form-control small-font" id="edit_candidate_resume"  aria-describedby="fieldX_2_Help" required />
+                                          </div>
                                               
                                                 
                                             </div>
