--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -638,7 +638,7 @@
                                   <button type="button" class="btn btn-primary mb-2" onclick="loadContent('nkd')">NKD</button>
                                   <button type="button" class="btn btn-primary mb-2" onclick="loadContent('seaService')">Sea Service</button>
                                   <button type="button" class="btn btn-primary mb-2" onclick="loadContent('evaluation')">Evaluation</button>
-                                  <button type="button" class="btn btn-primary mb-2" onclick="loadContent('files')">Photo and Resume</button>
+                                  <!-- <button type="button" class="btn btn-primary mb-2" onclick="loadContent('files')">Photo and Resume</button> -->
                                   <!-- Content will be dynamically replaced here -->
                               </div>
                               
