--- a/views/public/html/add-candidate.html
+++ b/views/public/html/add-candidate.html
@@ -931,6 +931,38 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="card-body pb-0 pt-2">
+                          <div class="row">
+                              <div class="col-md-6 mb-3">
+                                 
+                                    <label for="candidate_photo">Photo</label>
+                                      <input
+                                          type="file"
+                                          class="form-control"
+                                          id="candidate_photo"
+                                
+                                          
+                                      />
+                                     
+                                 
+                              </div>
+      
+                              <div class="col-md-6 mb-3">
+                               
+                                  <label for="candidate_resume">Resume</label>
+                                  <input
+                                      type="file"
+                                      class="form-control"
+                                      id="candidate_resume"
+                            
+                                      
+                                  />
+                                 
+                              
+                              </div>
+                              
+                          </div>
+                      </div>
                         <div class="card-body pb-0 pt-2 ">
                          <div class="col-md-12">
                                 <div class="form-floating">
