--- a/views/public/html/edit-candidate.html
+++ b/views/public/html/edit-candidate.html
@@ -566,8 +566,8 @@
 
             <div class="content-wrapper  mt-3 rounded-3">
                 <div class="w-100 mt-3">
-                  <input type="text" id="search-input" placeholder="Search...">
-<button onclick="searchCandidates()">Search</button>
+                  <!-- <input type="text" id="search-input" placeholder="Search...">
+<button onclick="searchCandidates()">Search</button> -->
 
                     <div class="">
                       <h4 class="text-center mt-3 mb-0 rounded-0 shadow-none border border-dark  card p-3">Candidate Table</h4>
